...
}

extension OrderBy {
    var imageName: String {
        switch self {
        case .desc:
            return "arrow.down"
        case .asc:
            return "arrow.up"
        }
    }
}

enum ForkStatus: String, Encodable {
    case `true`
...
