...
                            .stroke(lineWidth: 1)
                            .fill(.blue)
                    )
            }
            
            HStack(alignment: .center, spacing: 5) {
                Image(systemName: "star")
                    .resizable()
                    .bold()
                    .aspectRatio(contentMode: .fit)
                    .foregroundStyle(.softGray)
                    .frame(width: 15, height: 15)
                    .padding(.bottom, 2)
...
