...
                    viewModel.search = ""
                } else {
                    focusField = .search
                }
            }
        )
        .accessibilityIdentifier("SearchTextField")
        .frame(maxWidth: .infinity)
        .padding(.horizontal, 16)
        .padding(.bottom, 16)
    }
    
    private var userList: some View {
...
