...
            
            if let email = viewModel.email {
                infoView(imageName: "envelope", value: email)
            }
            
            if let github = viewModel.githubProfileLink {
                infoView(imageName: "link", value: github)
                    .foregroundStyle(.link)
                    .onTapGesture {
                        onTapUrl?(github)
                    }
            }
            
...
